--- a/web/css/site.css
+++ b/web/css/site.css
@@ -113,3 +113,28 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+.post .post-meta {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.post-meta .post-date {
+    font-size: 13px;
+}
+.post .post-title {
+    font-size: 18px;
+    margin-bottom: 0;
+}
+
+.post-image {
+    margin-bottom: 1rem;
+    border-radius: 3px;
+    position: relative;
+    height: 200px;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+    background-color: #e2e2e2;
+}
